examples/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    type: ingressclass
  name: test
spec:
  controller: k8s.io/ingress-nginx
