examples/2_pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod
  namespace: test
  labels:
    app: pod
    type: pod
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: nginx-html
      mountPath: /usr/share/nginx/html/
    - name: nginx-data
      mountPath: /data
  volumes:
  - name: nginx-html
    persistentVolumeClaim:
      claimName: pod-html
  - name: nginx-data
    persistentVolumeClaim:
      claimName: pod-data
