examples/3_dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep
  namespace: test
  labels:
    app: dep
    type: deployment
spec:
  selector: 
    matchLabels:
      app: dep
      type: deployment
  template:
    metadata:
      labels:
        app: dep
        type: deployment
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          limits:
            cpu: 100m
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html/
        - name: nginx-data
          mountPath: /data
      volumes:
      - name: nginx-html
        persistentVolumeClaim:
          claimName: dep-html
      - name: nginx-data
        persistentVolumeClaim:
          claimName: dep-data
