examples/4_ds.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ds
  namespace: test
  labels:
    app: ds
    type: daemonset
spec:
  selector: 
    matchLabels:
      app: ds
      type: daemonset
  template:
    metadata:
      labels:
        app: ds
        type: daemonset
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: nginx-html
          mountPath: /usr/share/nginx/html/
        - name: nginx-data
          mountPath: /data
      volumes:
      - name: nginx-html
        persistentVolumeClaim:
          claimName: ds-html
      - name: nginx-data
        persistentVolumeClaim:
          claimName: ds-data
