examples/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: test
  namespace: test
  labels:
    app: ds
    type: daemonset
spec:
  selector: 
    matchLabels:
      app: ds
      type: daemonset
  template:
    metadata:
      labels:
        app: ds
        type: daemonset
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: nginx
        image: nginx
