examples/k8s-tools.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-tools
  namespace: test
  labels:
    app: k8s-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-tools
  template:
    metadata:
      labels:
        app: k8s-tools
      #annotations:
      #  sidecar.istio.io/inject: "false"
      #annotations:
      #  traffic.sidecar.istio.io/excludeOutboundPorts: '3306'
      #annotations      # elasticsearch
      #  traffic.sidecar.istio.io/excludeInboundPorts: "9443"
      #  traffic.sidecar.istio.io/includeInboundPorts: '*'
      #annotations:     # node-manager
      #  traffic.sidecar.istio.io/excludeOutboundPorts: "8443"
      #annotations:
      #  traffic.sidecar.istio.io/excludeOutboundIPRanges: "58.34.203.27"
    spec:
      terminationGracePeriodSeconds: 1
      restartPolicy: Always
      containers:
      - name: k8s-tools
        image: "registry.cn-shanghai.aliyuncs.com/hybfkuf/k8s-tools:latest"
        imagePullPolicy: Always
        securityContext:
          privileged: true
