examples/pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-nginx
  labels:
    app: pod-nginx
spec:
  containers:
  - name: nginx
    image: nginx
    #imagePullPolicy: IfNotPresent
    imagePullPolicy: Always
