examples/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: test
  labels:
    app: nginx
    type: pod
spec:
  terminationGracePeriodSeconds: 1
  containers:
  - name: nginx
    image: nginx
  #  volumeMounts:
  #  - name: data
  #    mountPath: /data
  #  - name: html
  #    mountPath: /usr/share/nginx/html
  #volumes:
  #- name: data
  #  persistentVolumeClaim:
  #    claimName: nginx-data
  #- name: html
  #  persistentVolumeClaim:
  #    claimName: nginx-html
