examples/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: test
  namespace: test
  labels:
    app: sts
    type: statefulset
spec:
  replicas: 3
  serviceName: sts-headless
  selector:
    matchLabels:
      app: sts
      type: statefulset
  template:
    metadata:
      labels:
        app: sts
        type: statefulset
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: nginx
        image: nginx
