examples/5_sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: sts-headless
  namespace: test
  labels:
    app: sts
    type: statfulset
spec:
  selector:
    app: sts
    type: statfulset
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
  
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts
  namespace: test
  labels:
    app: sts
    type: statfulset
spec:
  replicas: 3
  serviceName: sts-headless
  selector:
    matchLabels:
      app: sts
      type: statfulset
  template:
    metadata:
      labels:
        app: sts
        type: statfulset
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: html
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: nfs-sc
      resources:
        requests:
          storage: 8Gi
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: nfs-sc
      resources:
        requests:
          storage: 8Gi
