examples/6_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  namespace: test
  labels:
    app: svc
spec:
  selector:
    app: svc
  ports:
  - name: http
    port: 80
    targetPort: 80
