examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: test
  labels:
    type: service
spec:
  selector:
    app: svc
  ports:
  - name: http
    port: 80
    targetPort: 80
