examples/all.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test1
  labels:
    type: namespace
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: test
spec:
  selector:
    app: dep
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: test
  labels:
    app: dep
    type: deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: dep
      type: deployment
  template:
    metadata:
      labels:
        app: dep
        type: deployment
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: nginx
        image: nginx
        resources:
          limits:
            cpu: 100m
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: test
#  labels:
#    app: nginx
#    type: pod
#spec:
#  terminationGracePeriodSeconds: 1
#  containers:
#  - name: nginx
#    image: nginx



---
apiVersion: v1
kind: Service
metadata:
  name: sts-headless
  namespace: test
  labels:
    app: sts
    type: statfulset
spec:
  selector:
    app: sts
    type: statfulset
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: 80
  
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: test
  namespace: test
  labels:
    app: sts
    type: statefulset
spec:
  replicas: 3
  serviceName: test-headless
  selector:
    matchLabels:
      app: sts
      type: statefulset
  template:
    metadata:
      labels:
        app: sts
        type: statefulset
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: nginx
        image: nginx

---
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: test
  namespace: test
  labels:
    app: ds
    type: daemonset
spec:
  selector: 
    matchLabels:
      app: ds
      type: daemonset
  template:
    metadata:
      labels:
        app: ds
        type: daemonset
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - name: nginx
        image: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: test
  labels:
    type: ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    type: ingressclass
  name: test
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test
  namespace: test
  labels:
    type: networkpolicy
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: test
    ports:
      - protocol: TCP
        port: 80
